--- a/vercel.json
+++ b/vercel.json
@@ -1,86 +1,14 @@
 {
-    "builds":[
-        {
-            "src":"index.js",
-            "use":"@vercel/node"
-        },
-        {
-            "src":"build/**",
-            "use":"@vercel/static"
-        }
+    "builds": [
+      {
+        "src": "index.js",
+        "use": "@vercel/node"
+      },
+      {
+        "src": "build/**",
+        "use": "@vercel/static"
+      }
     ],
-    "routes":[
-        {
-            "src":"/products",
-            "use":"index.js"
-        },
-        {
-            "src":"/products/(.*)",
-            "use":"index.js"
-        },
-        {
-            "src":"/categorys",
-            "use":"index.js"
-        },
-        {
-            "src":"/categorys/(.*)",
-            "use":"index.js"
-        },
-        {
-            "src":"/brands",
-            "use":"index.js"
-        },
-        {
-            "src":"/brands/(.*)",
-            "use":"index.js"
-        },
-        {
-            "src":"/users",
-            "use":"index.js"
-        },
-        {
-            "src":"/users/(.*)",
-            "use":"index.js"
-        },
-        {
-            "src":"/cart",
-            "use":"index.js"
-        },
-        {
-            "src":"/cart/(.*)",
-            "use":"index.js"
-        },
-        {
-            "src":"/auth",
-            "use":"index.js"
-        },
-        {
-            "src":"/auth/(.*)",
-            "use":"index.js"
-        },
-        {
-            "src":"/orders",
-            "use":"index.js"
-        },
-        {
-            "src":"/orders/(.*)",
-            "use":"index.js"
-        },
-        {
-            "src":"/webhook",
-            "use":"index.js"
-        },
-        {
-            "src":"/create-payment-intent",
-            "use":"index.js"
-        },
-        {
-            "src":"/",
-            "use":"build/index.html"
-        },
-        {
-            "src":"/(.+)",
-            "use":"build/$1"
-        }
-    ]
-}
+  
+    "rewrites": [{ "source": "/(.*)", "destination": "index.js" }]
+  }
